--- a/index.html
+++ b/index.html
@@ -10,16 +10,15 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
    <!-- Custom CSS -->
    <link href="estilo.css" rel="stylesheet">
+   <link rel="icon" href="https://files.oaiusercontent.com/file-Foip8gKmtHQ62jdVQvDHom?se=2025-02-23T16%3A34%3A31Z&sp=r&sv=2024-08-04&sr=b&rscc=max-age%3D604800%2C%20immutable%2C%20private&rscd=attachment%3B%20filename%3Ddbfbbbdf-5d4c-4279-9739-9cc2df2b7599.webp&sig=cGOHQuGLCu6rWQKDeUj768Msxv8MieQ2697jsbsmUTo%3D" type="image/x-icon"> 
 </head>
 <body>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
+    <div class="container-fluid"> 
       <!-- El enlace "Inicio" apunta a la sección #inicio -->
       <a class="navbar-brand" href="#inicio">
-        <img src="https://files.oaiusercontent.com/file-Foip8gKmtHQ62jdVQvDHom?se=2025-02-22T20%3A01%3A11Z&sp=r&sv=2024-08-04&sr=b&rscc=max-age%3D604800%2C%20immutable%2C%20private&rscd=attachment%3B%20filename%3Ddbfbbbdf-5d4c-4279-9739-9cc2df2b7599.webp&sig=wB0nPf4xCP7uCL7AtsYx1aH0IvqJH4etwLTMBamD3lc%3D" alt="Logo">
-        ShopLibre
-      </a>
+        <img src="https://files.oaiusercontent.com/file-Foip8gKmtHQ62jdVQvDHom?se=2025-02-22T20%3A01%3A11Z&sp=r&sv=2024-08-04&sr=b&rscc=max-age%3D604800%2C%20immutable%2C%20private&rscd=attachment%3B%20filename%3Ddbfbbbdf-5d4c-4279-9739-9cc2df2b7599.webp&sig=wB0nPf4xCP7uCL7AtsYx1aH0IvqJH4etwLTMBamD3lc%3D" alt="Logo">ShopLibre</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" 
               aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
          <span class="navbar-toggler-icon"></span>
@@ -71,8 +70,6 @@
            <img src="https://files.oaiusercontent.com/file-GfBWsDrdnmau2rfVBmpCiE?se=2025-02-23T01%3A52%3A11Z&sp=r&sv=2024-08-04&sr=b&rscc=max-age%3D604800%2C%20immutable%2C%20private&rscd=attachment%3B%20filename%3D07f3492c-6756-4dc0-8680-9fa1d0ed379c.webp&sig=MeD1uYLr39A5bmyZn6ze2iVB68TmcZIGmQdraGaLT%2BU%3D " alt="Imagen de Inicio" class="img-fluid">
            <a href="#productsContainer" class="btn btn-primary btn-lg">Ver Productos</a>
          </div>
-         
-         
          </div>
       </div>
     </div>
@@ -687,7 +684,7 @@
     <div class="container text-center text-md-start">
       <div class="row">
          <div class="col-md-6 mb-4">
-           <h5>Mi Catálogo</h5>
+           <h5>ShopLibre</h5>
            <p>Somos una empresa comprometida con ofrecer los mejores productos y servicios.</p>
          </div>
          <div class="col-md-3 mb-4">
@@ -709,7 +706,7 @@
       </div>
     </div>
     <div class="text-center py-3 bg-dark">
-      © 2025 Mi Catálogo. Todos los derechos reservados.
+      © 2025 ShopLibre. Todos los derechos reservados.
     </div>
   </footer>
 
